--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,6 @@ section {
     align-items: center;
 }
 
-img {
-    width: 80px;
-}
-
 h1 {
     width: 50%;
     font-size: 50px;
@@ -45,4 +41,22 @@ h1 {
 .container>div div {
     width: 30%;
     height: 80%;
+    background: black;
+    position: relative;
+}
+
+.container>div div img {
+    width: 100%;
+    height: 100%;
+}
+
+.container>div div span {
+    position: absolute;
+    color: #F2F2F2;
+    text-align: center;
+    top: calc(50% - (34.5px / 2));
+    display: block;
+    width: 100%;
+    font-size: 30px;
+    height: auto;
 }
