--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@ body {
 section {
     width: 100%;
     height: 150vh;
-    background: purple;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -43,6 +42,7 @@ h1 {
     height: 80%;
     background: black;
     position: relative;
+    cursor: pointer;
 }
 
 .container>div div img {
@@ -52,11 +52,30 @@ h1 {
 
 .container>div div span {
     position: absolute;
+    z-index: 1;
     color: #F2F2F2;
     text-align: center;
     top: calc(50% - (34.5px / 2));
-    display: block;
     width: 100%;
     font-size: 30px;
     height: auto;
+    display: none;
+}
+
+.container>div div:hover span {
+    display: block;
+}
+
+.container>div div::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+}
+
+.container>div div:hover::after {
+    background: rgba(19, 17, 17, .8);
+    transition: .5s linear;
 }
